<resources>
    <string name="app_name">Notepad</string>

    <!-- Note Detail Activity -->
    <string name="activity_note_detail_title_hint">Note\'s title</string>
    <string name="activity_note_detail_content_hint">Note\'s content</string>
    <string name="note_detail_material_builder_delete_note_title">Deleting a note</string>
    <string name="note_detail_material_builder_delete_note_message">Are you sure you want to delete the note</string>
    <string name="note_detail_material_builder_delete_permanently_note_message">Are you sure you want to delete the note permanently</string>
    <string name="note_detail_material_builder_delete_note_positive_button">Delete</string>
    <string name="note_detail_material_builder_delete_note_negative_button">Cancel</string>

    <string name="note_detail_material_builder_restore_note_title">Restoring a note</string>
    <string name="note_detail_material_builder_restore_note_message">Are you sure you want to restore this note?</string>
    <string name="note_detail_material_builder_restore_note_positive_button">Yes</string>
    <string name="note_detail_material_builder_restore_note_negative_button">No</string>

    <string name="note_detail_material_builder_back_on_pressed_title">Warning !</string>
    <string name="note_detail_material_builder_back_on_pressed_message">You may lose the changes, do you really want to continue?</string>
    <string name="note_detail_material_builder_back_on_pressed_positive_button">Confirm</string>
    <string name="note_detail_material_builder_back_on_pressed_negative_button">Cancel</string>

    <string name="note_detail_action_delete">Delete</string>
    <string name="note_detail_action_save">Save</string>
    <string name="note_detail_action_undo">Undo</string>
    <string name="note_detail_action_redo">Redo</string>
    <string name="note_detail_nb_character">character</string>
    <string name="note_detail_nb_characters">characters</string>
    <string name="note_detail_is_empty">Both fields should not be empty</string>

    <!-- Note Detail Toolbar Menu -->
    <string name="note_detail_toolbar_menu_validate">Validate</string>
    <string name="note_detail_toolbar_menu_delete">Delete</string>


    <!-- Note List Toolbar Menu -->
    <string name="note_list_toolbar_menu_search">Search</string>
    <string name="note_list_toolbar_menu_sort_by">Sort by :</string>
    <string name="note_list_toolbar_menu_sort_by_date">Date</string>
    <string name="note_list_toolbar_menu_sort_by_alphabetical">Alphabetical</string>
    <string name="note_list_toolbar_menu_sort_by_favorite">Favorite</string>
    <string name="note_list_toolbar_menu_sort_by_none">Without sorting</string>

    <!-- Note List Bottom Alert Dialog Delete All Notes in Trash -->
    <string name="note_list_alert_dialog_delete_all_notes_title">Delete all notes</string>
    <string name="note_list_alert_dialog_delete_all_notes_subtitle">Are you sure you want to delete the note permanently ?</string>
    <string name="note_list_alert_dialog_delete_all_notes_positive_button">Confirm</string>
    <string name="note_list_alert_dialog_delete_all_notes_negative_button">Cancel</string>

    <!-- Note List Bottom Nav View Menu -->
    <string name="note_list_bottom_nav_view_menu_notes">Notes</string>
    <string name="note_list_bottom_nav_view_menu_favorites">Favorites</string>
    <string name="note_list_bottom_nav_view_menu_trash">Trash</string>
    <string name="note_list_bottom_nav_view_menu_categories">Categories</string>

    <!-- Note Detail Bottom Nav View Menu -->
    <string name="note_detail_bottom_nav_share">Share</string>
    <string name="note_detail_bottom_nav_view_menu_add_to_favorites">Favorites</string>
    <string name="note_detail_bottom_nav_view_menu_trash">Delete</string>
    <string name="note_detail_bottom_nav_view_menu_print">Print</string>
    <string name="note_detail_bottom_nav_view_menu_restore">Restore</string>

    <!-- Note Detail Bottom Nav View Menu Edition Mode -->
    <string name="note_detail_bottom_nav_view_menu_edition_mode_checklist">Checklist</string>
    <string name="note_detail_bottom_nav_view_menu_edition_mode_format">Format</string>
    <string name="note_detail_bottom_nav_view_menu_edition_mode_gallery">Gallery</string>
    <string name="note_detail_bottom_nav_view_menu_edition_mode_handwrite">Handwrite</string>

    <string name="custom_spinner_add_category_text">Add category</string>
    <string name="note_list_activity_list_empty">The list is empty</string>

    <string name="note_detail_content_text">Number of chars : %1d</string>

    <string-array name="categories_array">
        <item>No category</item>
        <item>Travel</item>
        <item>Personal</item>
        <item>Life</item>
        <item>Work</item>
        <item>Shopping</item>
        <item>Hobbies</item>
        <item>NEW</item>
    </string-array>

</resources>