<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/activity_note_list_bottom_nav_view_notes"
        android:icon="@drawable/ic_notes"
        android:title="@string/note_list_bottom_nav_view_menu_notes"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_note_list_bottom_nav_view_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/note_list_bottom_nav_view_menu_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_note_list_bottom_nav_view_trash"
        android:icon="@drawable/ic_delete"
        android:title="@string/note_list_bottom_nav_view_menu_trash"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/activity_note_list_bottom_nav_view_categories"
        android:icon="@drawable/ic_categorie"
        android:title="@string/note_list_bottom_nav_view_menu_categories"
        app:showAsAction="ifRoom" />
</menu>