<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_edition_mode_checklist"
        android:icon="@drawable/ic_checklist"
        android:title="@string/note_detail_bottom_nav_view_menu_edition_mode_checklist"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_edition_mode_format"
        android:icon="@drawable/ic_text_formatting"
        android:title="@string/note_detail_bottom_nav_view_menu_edition_mode_format"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_edition_mode_gallery"
        android:icon="@drawable/ic_gallery"
        android:title="@string/note_detail_bottom_nav_view_menu_edition_mode_gallery"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_edition_mode_handwrite"
        android:icon="@drawable/ic_handwriting"
        android:title="@string/note_detail_bottom_nav_view_menu_edition_mode_handwrite"
        app:showAsAction="ifRoom" />
</menu>