<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_share"
        android:icon="@drawable/ic_share"
        android:title="@string/note_detail_bottom_nav_view_menu_share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_favorites"
        android:icon="@drawable/ic_star"
        android:title="@string/note_detail_bottom_nav_view_menu_add_to_favorites"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_trash"
        android:icon="@drawable/ic_delete"
        android:title="@string/note_detail_bottom_nav_view_menu_trash"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/note_detail_bottom_nav_view_menu_print"
        android:icon="@drawable/ic_printer"
        android:title="@string/note_detail_bottom_nav_view_menu_print"
        app:showAsAction="ifRoom" />
</menu>